# mf-excel

./: .gitignore  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: python-publish.yml
forecas_output_examples/: forecast_output_test.xlsm
forecast_output_examples/: forecast_output_test.xlsm  forecast_output_test2.xlsm
mf_excel/: cli.py
mf_excel.egg-info/: PKG-INFO
mf_excel/backend/: app.py
mf_excel/backend/services/: config.py  forecast_service.py  validation.py
mf_excel/excel_client/: addin.py  config.py  ui.py
practice datasets/: test.xlsm  test2.xlsm
practice_datasets/: test.xlsm  test2.xlsm
