[project]
name = "mf-excel"
version = "0.1.3"                
description = "An Excel integration for macroframe-forecast"
readme = "README.md"
license = "MIT"                 
requires-python = ">=3.12.7"

authors = [
  { name = "Yusuf Muhammed Adekunle" }
]

dependencies = [
  "pandas==2.2.2",
  "flask==3.0.0",
  "sktime==0.28.0",
  "scikit-learn==1.4.2",
  "macroframe-forecast==0.1.5",
  "xlwings==0.33.15",
  "requests==2.32.3",
  "dask[dataframe]==2024.8.1",
  "simplejson==3.20.2",
]


classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Operating System :: OS Independent",
]

[project.scripts]
macroframe-forecast = "mf_excel.cli:run"

[tool.setuptools]
# Explicit package discovery that excludes dataset folders
packages = { find = { exclude = ["practice_datasets*", "forecast_output_examples*"] } }

[tool.setuptools.packages.find]
where = ["."]
exclude = ["practice_datasets*", "forecast_output_examples*"]

[project.urls]
Homepage = "https://mfexcel.onrender.com/"
Repository = "https://github.com/Kunlex58/mf-excel"
Documentation = "https://mfexcel.onrender.com/"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
